# ml-python-exam-project

./: .env  .gitignore  Dockerfile  HelloWorld.ipynb  README.md  docker-compose.yml  machine_learning.md  main.py  pokemon_cache.json  pyproject.toml  requirements.txt
machine_learning/: plotting.ipynb
machine_learning/resources/pokemon-dataset-gen-1-9/versions/10/: pokeformslist.csv  pokemondataset_updated.csv  temp20.csv
machine_learning/roboflow_model/: PokemonGenOneModel.ipynb
machine_learning/roboflow_model/model_training/: args.yaml
machine_learning/roboflow_model/trained_yolo26_model/: results.csv
python/: pokedexTest.py
python/fastApi/: PokeAPI.py
python/streamlit/: ClusterFunctions.py  clustering.py  detailPage.py  llm_chat.py  llm_chat_function.py  mistral_streamlit_chat.py  pokedex.py  pokéPicRec.py  test.py
python/streamlit/functions/: ClusterFunctions.py  llm_chat_function.py  model_predict.py
python/streamlit/pages/: clustering.py  detail_page.py  mistral_streamlit_chat.py  pokemon_recogniser.py
python/tests/: fastapi_test.py  pokedex_test.py  wrong_api_key_test.py
