[project]
name = "ml-python-exam-project"
version = "0.1.0"
description = "Exam project for machine learning and pything electives, with pokemans"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.13.0",
    "ipywidgets>=8.1.8",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
]
