[project]
name = "ml-python-exam-project"
version = "0.1.0"
description = "Exam project for machine learning and pything electives, with pokemans"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "asyncio-contextmanager>=1.0.1",
    "fastapi>=0.136.1",
    "ipython>=9.13.0",
    "ipywidgets>=8.1.8",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "requests>=2.33.1",
    "roboflow>=1.3.7",
    "scikit-learn>=1.8.0",
    "streamlit>=1.57.0",
    "torch>=2.11.0.dev0",
    "torchaudio>=2.11.0.dev0",
    "torchvision>=0.26.0.dev0",
    "ultralytics>=8.4.46",
]

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-nightly" }
torchvision = { index = "pytorch-nightly" }
torchaudio = { index = "pytorch-nightly" }

[tool.uv]
prerelease = "allow"
environments = ["sys_platform == 'win32'"]