[project]
name = "ml-python-exam-project"
version = "0.1.0"
description = "Exam project for machine learning and pything electives, with pokemans"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio-contextmanager>=1.0.1",
    "fastapi>=0.136.1",
    "ipython>=9.13.0",
    "ipywidgets>=8.1.8",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.9",
    "mistralai>=2.4.5",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pytest>=9.0.3",
    "requests>=2.33.1",
    "roboflow>=1.3.7",
    "scikit-learn>=1.8.0",
    "streamlit>=1.57.0",
    "ultralytics>=8.4.46",
]
